[tool.poetry]
name = "openai-ft-test"
version = "0.1.0"
description = ""
authors = ["Sam Lee <me@shibuya-rin.moe>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pypdf = "^4.2.0"
openai = "^1.30.1"
tiktoken = "^0.7.0"
cuda-python = "12.5.0"
langchain = "^0.2.1"
numpy = "^1.26.4"
langchain-openai = "^0.1.8"
pandas = "^2.2.2"
langchain-community = "^0.2.1"
sqlite-vss = "^0.1.2"
opencv-python = "^4.10.0.82"
langchain-chroma = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
